--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Programming Languages</h1>
     <nav>
         <ul>
-            <li><a href="./java.html"></a>Java</li>
-            <li><a href="./python.html"></a>Python</li>
-            <li><a href="./kotlin.html"></a>Kotlin</li>
+            <li><a href="./java.html">Java</a></li>
+            <li><a href="./python.html">Python</a></li>
+            <li><a href="./kotlin.html">Kotlin</a></li>
         </ul>
     </nav>
 <a href="http://"><img src="img/rssicon.png" alt="icono RSS" width="60px"></a>
