--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
             <li><a href="./kotlin.html">Kotlin</a></li>
         </ul>
     </nav>
-<a href="http://"><img src="img/rssicon.png" alt="icono RSS" width="60px"></a>
+<a href="rss/feed.rss"><img src="img/rssicon.png" alt="icono RSS" width="60px"></a>
 </body>
 </html>
